--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
                 Web Technologies: SQL, HTML, CSS, Docker<br>
                 Familiar with: Javascript, Git<br>
             </p>    
+            <p>Script Kiddie<br>
+                Introductory Hacker and Pen Tester<br>
+                Familiar with Linux OS and commands<br>
+                CTF Player, Bug Hunter<br>
+            </p>    
+           
     </div>    
    
     <br><br><br>
