--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         <div class="menu" id="WhatIdo">
             <h2>What I do?</h2>
             <p>DEVELOPMENT<br>
-                Languages: Python, C, C++, PHP<br>
-                Web Technologies: SQL, HTML, CSS, Docker<br>
-                Familiar with: Javascript, Git<br>
+                &#9Languages: Python, C, C++, PHP<br>
+                &#9Web Technologies: SQL, HTML, CSS, Docker<br>
+                &#9Familiar with: Javascript, Git<br>
             </p>    
             <p>SCRIPT KIDDIE<br>
-                Introductory Hacker and Pen Tester<br>
-                Familiar with Linux OS and commands<br>
-                CTF Player, Bug Hunter<br>
+                &#9Introductory Hacker and Pen Tester<br>
+                &#9Familiar with Linux OS and commands<br>
+                &#9CTF Player, Bug Hunter<br>
             </p>    
            
     </div>    
