--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         <div class="menu" id="WhatIdo">
             <h2>What I do?</h2>
             <p>DEVELOPMENT<br>
-                &#9 Languages: Python, C, C++, PHP<br>
-                &#9 Web Technologies: SQL, HTML, CSS, Docker<br>
-                &#9 Familiar with: Javascript, Git<br>
+                Languages: Python, C, C++, PHP<br>
+                Web Technologies: SQL, HTML, CSS, Docker<br>
+                Familiar with: Javascript, Git<br>
             </p>    
             <p>SCRIPT KIDDIE<br>
-                &#9 Introductory Hacker and Pen Tester<br>
-                &#9 Familiar with Linux OS and commands<br>
-                &#9 CTF Player, Bug Hunter<br>
+                Introductory Hacker and Pen Tester<br>
+                Familiar with Linux OS and commands<br>
+                CTF Player, Bug Hunter<br>
             </p>    
            
     </div>    
