--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <meta name="description" content="Kaarthik shankar - Personal website">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content= "width=device-width, user-scalable=no">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     
 </head>
