--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
             <div class="development">Development:</div><br>
             <br><br>
             <p>
-                Languages: Python, C, C++, PHP<br><br>
+                Languages: Python, C, C++, PHP, Bash<br><br>
                 Web Technologies: HTML, CSS, MySQL, Docker
             </p>  
 
@@ -48,11 +48,6 @@
             <div id="slider">
                 <p style="float: left; margin-left: 130px; font-size: 20px;">Worked with: </p>
                 <ul>
-                    <li>
-                    <div class="slider-container">
-                        <p>Bash</p>
-                    </div>
-                    </li>
                     <li>
                     <div class="slider-container">
                         <p>Git</p>
@@ -66,6 +61,11 @@
                     <li>
                     <div class="slider-container">
                         <p>Express</p>
+                    </div>
+                    </li>
+                    <li>
+                    <div class="slider-container">
+                        <p>React</p>
                     </div>
                     </li>
                 </ul>
