--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
     <div class="main">
         <div id="intro">
             <br><br><br><br><br><br><br><br><br>
-            <p class="heading">Hell, I am Kaarthik &#129313;</p>
+            <p class="heading">Hello, I am Kaarthik &#129313;</p>
         </div>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <div id="WhoamI">
